--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -2,11 +2,11 @@
 
 <% buildings.each do |building| %>
   <div>
-    <p>Street Address: <%= building.street_address %></p><br>
-    <p>City: <%= building.city %></p><br>
-    <p>State: <%= building.state_name %></p><br>
-    <p>Postal Code: <%= building.postal_code %></p><br>
-    <p>Description: <%= building.description %></p><br>
+    <p>Street Address: <%= building.street_address %></p>
+    <p>City: <%= building.city %></p>
+    <p>State: <%= building.state_name %></p>
+    <p>Postal Code: <%= building.postal_code %></p>
+    <p>Description: <%= building.description %></p>
     <p>Owner: <%= building.owner_name %></p>
   </div>
 <% end %>
